unpackaged/main/default/objects/sixsense__X6sense_Lead_Scores__c/fields/sixsense__Company_6QA_Age_in_Days__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Company_6QA_Age_in_Days__c</fullName>
    <label>Company 6QA Age in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>