unpackaged/main/default/objects/sixsense__X6sense_Lead_Scores__c/fields/sixsense__Company_6QA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Company_6QA_End_Date__c</fullName>
    <label>Company 6QA End Date</label>
    <type>Date</type>
</CustomField>