unpackaged/main/default/objects/sixsense__X6sense_Lead_Scores__c/fields/sixsense__CompanyProfileScore__c.field-meta.xml
<CustomField>
    <fullName>sixsense__CompanyProfileScore__c</fullName>
    <label>Company Profile Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>