unpackaged/main/default/objects/sixsense__X6sense_Lead_Scores__c/fields/sixsense__Reach_Score__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Reach_Score__c</fullName>
    <label>Reach Score</label>
    <length>80</length>
    <type>Text</type>
</CustomField>